waf-large-payload/connrst-demo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.15.1-alpine
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: http
          containerPort: 80
        #resources:
        #  limits:
        #    cpu: "1"
        #    memory: 1Gi
        #  requests:
        #    cpu: "1"
        #    memory: 1Gi
        volumeMounts:
          - name: workspace
            mountPath: /data
          - name: config-nginx
            mountPath: /etc/nginx/conf.d/
      volumes:
      - name: workspace
        emptyDir:
      - name: config-nginx
        configMap:
          name: config-nginx
